// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with placeholder correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "color": "#52C5DC",
          "fontSize": 14,
          "lineHeight": 18,
        },
        undefined,
      ],
    ]
  }
>
  text
</Text>
`;

exports[`renders with reminder correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "color": "#52C5DC",
          "fontSize": 14,
          "lineHeight": 18,
        },
        undefined,
      ],
    ]
  }
>
  2019-3-27T00:00:00 once
</Text>
`;

exports[`renders without reminder or placeholder correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Array [
        Object {
          "color": "#52C5DC",
          "fontSize": 14,
          "lineHeight": 18,
        },
        undefined,
      ],
    ]
  }
>
  Set a Reminder
</Text>
`;
